# OpenProjectBot

./: .gitignore  CMakeLists.txt  Makefile  config.yaml  go.mod  go.sum
cmd/main/: main.go
cmd/op/: main.go
deployments/: openprojectbot.service  postinst
internal/config/: config.go
internal/core/: app.go
internal/models/: chat.go  employee_stats.go  work_packages.go  work_packages_response.go
internal/server/: admin.go
internal/services/: job.go  open_project.go  telegram.go
internal/storage/: bot.go
