set(CPACK_GENERATOR "DEB")

set(PROJECT_VERSION_MAJOR 0)
set(PROJECT_VERSION_MINOR 0)
set(PROJECT_VERSION_PATCH 1)


set(VERSION_STRING "${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.${PROJECT_VERSION_PATCH}")

set(CPACK_PACKAGE_VERSION_MAJOR ${PROJECT_VERSION_MAJOR})
set(CPACK_PACKAGE_VERSION_MINOR ${PROJECT_VERSION_MINOR})
set(CPACK_PACKAGE_VERSION_PATCH ${PROJECT_VERSION_PATCH})
set(CPACK_DEBIAN_PACKAGE_NAME "openprojectbot")
set(CPACK_DEBIAN_PACKAGE_VERSION ${VERSION_STRING})
set(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "amd64")
set(CPACK_DEBIAN_PACKAGE_MAINTAINER "Соколовский Павел Игоревич")
set(CPACK_PACKAGE_FILE_NAME "open-project-bot-${VERSION_STRING}")

set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA
    "${CMAKE_SOURCE_DIR}/deployments/postinst"
)

install( FILES config.yaml DESTINATION /etc/open_project_bot PERMISSIONS OWNER_WRITE OWNER_READ GROUP_READ WORLD_READ )
install( PROGRAMS build/openprojectbot DESTINATION /usr/bin PERMISSIONS OWNER_EXECUTE OWNER_WRITE OWNER_READ GROUP_EXECUTE GROUP_READ WORLD_EXECUTE WORLD_READ )
install( FILES deployments/openprojectbot.service DESTINATION /etc/systemd/system )
include(CPack)
